--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     width: 600px;
-    height: 300px;
+    height: 500px;
     margin: auto;
     overflow: hidden;
     color: var(--text-color);
@@ -77,8 +77,8 @@ body {
 
 #logo {
     padding-left: 4px;
-    width: 22px;
-    height: 22px;
+    width: 26px;
+    height: 26px;
 }
 
 .titleBar > .title {
@@ -144,18 +144,13 @@ body {
 
 .sidebarButtons {
     color: var(--text-color);
-    font-size: 12px;
+    font-size: 20px;
     background: transparent;
-    padding: 5vh 0 3vh 0;
+    padding: 50px 0 0 0;
     display: block;
     border: none;
     margin:0 auto;
-    display:block;
     justify-content: center;
-}
-
-#userButton, #metricsButton, #modeButton {
-    font-size: 2.5vw;
 }
 
 .leftMenu > button:hover {
@@ -194,13 +189,10 @@ body {
     padding-bottom: 2%;
 }
 
-.time_button, .control_button, .break_button, .start_session, #loginButton {
-    appearance: none;
-    backface-visibility: hidden;
+.buttons {
     background-color: #f8cc1d;
     border-radius: 8px;
     border-style: none;
-    box-shadow: rgb(218, 180, 38) 0 4px 9px;
     box-sizing: border-box;
     color: #030303;
     cursor: pointer;
@@ -212,12 +204,10 @@ body {
     line-height: 1.0;
     outline: none;
     overflow: hidden;
-    padding: 13px 20px;
+    padding: 10px 15px;
     position: relative;
     text-align: center;
     text-decoration: none;
-    transform: translate3d(0, 0, 0);
-    transition: all .3s;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -225,10 +215,9 @@ body {
     white-space: nowrap;
 }
 
-.time_button:hover, .control_button:hover, .break_button:hover, .start_session, #loginButton:hover {
+.buttons:hover {
     background-color: #f8d655;
     opacity: 1;
-    transition-duration: .35s;
 }
 
 .time_button:active, .control_button:active, .break_button:active, .start_session, #loginButton:active {
@@ -293,10 +282,6 @@ body.dark-mode {
     background-color: var(--text-color);
 }
 
-.titleBarBtns >.closeBtn.dark-mode:hover {
-    background-color: darkred;
-}
-
 .mainApp > .contentArea > .leftMenu.dark-mode {
     background-color: #777777;
 }
@@ -305,20 +290,129 @@ body.dark-mode {
     color: var(--background-color);
 }
 
-.login {
-    margin: auto;
+hr {
+    width: 90%;
 }
 
-.filepath {
-    display: block;
+#buttons {
+    text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+#contentPages > h3 {
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#contentPages > p {
+    text-align: center;
+
+}
+
+#form-container {
+    padding: 0 5vw;
+}
+
+#registrationForm {
+    border: 1px solid grey;
+    padding: 5px;
+    border-radius: 10px;
+    text-align: left;
+}
+
+input.custom-input {
+    font-family: 'JetBrains Mono';
+    font-size: 18px;
+}
+
+label, input {
+    display: inline-block;
+}
+
+form > label {
+    font-size: 18px;
+    width: 40%;
+    text-align: right;
+}
+
+#createAccountButtons {
+    text-align: center;
+    padding: 20px 0;
+}
+
+@media screen and (max-width: 576px) {
     .mainApp {
         width: 100%;
         height: 100%;
     }
 
+    #mySideBar {
+        width: 20% !important;
+    }
+
+    /* Form stuff */
+    #registrationForm {
+        border: 1px solid grey;
+        padding: 5px;
+        border-radius: 10px;
+        text-align: left;
+    }
+
+    input.custom-input {
+        font-family: 'JetBrains Mono';
+        font-size: 12px;
+    }
+
+    label, input {
+        display: inline-block;
+    }
+
+    form > label {
+        font-size: 14px;
+        width: 40%;
+        text-align: right;
+    }
+
+    #createAccountButtons {
+        text-align: center;
+        padding: 20px 0;
+    }
 }
 
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .mainApp {
+        width: 100%;
+        height: 100%;
+    }
 
+    #mySideBar {
+        width: 20% !important;
+    }
+
+    /* Form stuff */
+    #registrationForm {
+        border: 1px solid grey;
+        padding: 5px;
+        border-radius: 10px;
+        text-align: left;
+    }
+
+    input.custom-input {
+        font-family: 'JetBrains Mono';
+        font-size: 18px;
+    }
+
+    label, input {
+        display: inline-block;
+    }
+
+    form > label {
+        font-size: 18px;
+        width: 40%;
+        text-align: right;
+    }
+
+    #createAccountButtons {
+        text-align: center;
+        padding: 20px 0;
+    }
+}
