--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,15 +305,9 @@ hr {
 
 #contentPages > p {
     text-align: center;
-
-}
-
-#form-container {
-    padding: 0 5vw;
 }
 
 #registrationForm {
-    border: 1px solid grey;
     padding: 5px;
     border-radius: 10px;
     text-align: left;
@@ -322,6 +316,7 @@ hr {
 input.custom-input {
     font-family: 'JetBrains Mono';
     font-size: 18px;
+    margin: 5px 0;
 }
 
 label, input {
@@ -349,9 +344,7 @@ form > label {
         width: 20% !important;
     }
 
-    /* Form stuff */
     #registrationForm {
-        border: 1px solid grey;
         padding: 5px;
         border-radius: 10px;
         text-align: left;
@@ -376,6 +369,10 @@ form > label {
         text-align: center;
         padding: 20px 0;
     }
+
+    .contentArea {
+        padding-top: 80px;
+    }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
@@ -390,7 +387,6 @@ form > label {
 
     /* Form stuff */
     #registrationForm {
-        border: 1px solid grey;
         padding: 5px;
         border-radius: 10px;
         text-align: left;
