Changed mainApp styles to allow for scrolling on mobile devices.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,6 +405,10 @@ input {
     .mainApp {
         width: 100%;
         height: 100%;
+        overflow: auto;
+        top: 0;
+        left: 0;
+        transform: none;
     }
 
     #mySideBar {
